2011-09-04
* add experimental virus scanning method using clamscan, just for Windows
executables

2011-09-02
* fix bugs in extraction code using xgettext
* store line numbers for extracted strings. This might come in handy in future
reporting.

2011-08-29
* ignore strings that will not significantly contribute to a score in the
ranking algorithm. This speeds up the algorithm by vast amounts.

2011-08-27
* add unpacking ar archives, such as Debian packages

2011-08-24
* replace homebrew string extraction code with a call to xgettext. It's
cleaner and gives better results. A small wrapper around it to parse output is
all that was needed.

2011-08-08
* fix InstallShield unpacking
* rewrite ARJ unpacking to new style unpacking

2011-08-07
* unpack .ico files
* start on unpacking InstallShield files. Unfortunately we can only process a
subset of files, because "unshield" can't process all files.

2011-08-02
* add scanning for ISO9660 file systems. Still need to determine the size of
the file system for the blacklist. This functionality needs FUSE and fuseiso.

2011-07-31
* move the RPM unpacking to an external file so BAT will not fail on systems
where there is no RPM Python and where unpacking RPM has been disabled.
* add identifiers for ISO9660

2011-07-26
* add mergeBlacklist method to merge sections in blacklists that overlap.

2011-07-25
* fix copyright statements
* remove more duplicate code from bruteforce.py
* move dynamic library scanning to a separate check
* move architecture scanning to a separate check
* fix cramfs scanning

2011-07-24
* finish ranking method from MSR 2011 paper, except reporting
* remove (some) duplicate code from bruteforce.py

2011-07-17
* don't barf if we can't generate a proper LIST for the batch extraction
program

2011-07-16
* start on reimplementing ranking methods from MSR 2011 paper

2011-07-10
* introduce generic method to create directories with the right names
* rewrite most search* methods to use the prescanned offsets
